--- a/plugins/actions/styleeditor/dialog-style-editor.ui
+++ b/plugins/actions/styleeditor/dialog-style-editor.ui
@@ -81,7 +81,7 @@
   </object>
   <object class="GtkDialog" id="dialog-style-editor">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Subtitle Editor - Style Editor</property>
+    <property name="title" translatable="yes">Subtitle Editor — Style Editor</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="type_hint">dialog</property>
